<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignInFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivLoginImage"
                android:layout_width="@dimen/_320sdp"
                android:layout_height="@dimen/_300sdp"
                android:contentDescription="@string/intro_image"
                android:scaleType="centerCrop"
                android:src="@drawable/image_prod" />

            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_65sdp"
                android:layout_gravity="center"
                android:layout_marginTop="13.00dp"
                android:contentDescription="@string/intro_icon"
                android:scaleType="centerCrop"
                android:src="@drawable/icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="13.00dp"
                android:text="@string/india_s_last_minute_app"
                android:textSize="22.10sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="13.00dp"
                android:text="@string/login_or_signup"
                android:textSize="16.90sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="26.dp"
                android:layout_marginTop="19.50dp"
                app:boxCornerRadiusBottomEnd="16.90dp"
                app:boxCornerRadiusBottomStart="16.90dp"
                app:boxCornerRadiusTopEnd="16.90dp"
                app:boxCornerRadiusTopStart="16.90dp"
                app:boxStrokeColor="@color/green"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUserNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_phone_24"
                    android:drawablePadding="9.00dp"
                    android:hint="@string/enter_mobile_number"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="58.50dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="26.dp"
                android:layout_marginTop="6.50dp"
                android:backgroundTint="#8d99ae"
                android:text="@string/Continue"
                android:textColor="@color/white"
                android:textSize="16.90sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>



</LinearLayout>